tests/gtests/negative/validation/02_invalid_type.gtest
#SET OUT=${WORK_DIR}/invalid_type.json
#RUN greentic-component test --wasm ${REPO_ROOT}/target/wasm32-wasip2/release/component_adaptive_card.wasm --manifest ${REPO_ROOT}/component.manifest.json --op card --input-json '{"validation_mode":"error","card_spec":{"inline_json":{"type":"NotCard","version":"1.3","body":[]}}}'
#EXPECT_EXIT 0
#CAPTURE_JSON > ${OUT}
#EXPECT_JSONPATH ${OUT} error.code equals AC_CARD_VALIDATION_FAILED
#EXPECT_JSONPATH ${OUT} error.details.validation_issues[*].code contains invalid-type
#SAVE_ARTIFACT ${OUT}
